.devcontainer/apps/astroshop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: astroshop-ingress
spec:
  rules:
  - host: astroshop.domain.placeholder
    http:
      paths:
      - backend:
          service:
            name: astroshop-frontendproxy
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - astroshop.domain.placeholder
    #secretName: wdldt-production-astro-tls
